--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>breeze-gateway</module>
         <module>breeze-modules</module>
+        <module>breeze-common</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
