--- a/breeze-modules/breeze-system/pom.xml
+++ b/breeze-modules/breeze-system/pom.xml
@@ -32,6 +32,11 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.breeze</groupId>
+            <artifactId>breeze-common-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
