--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </modules>
     <packaging>pom</packaging>
     <properties>
+        <breeze.version>0.0.1-SNAPSHOT</breeze.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -62,6 +63,12 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.breeze</groupId>
+                <artifactId>breeze-common-core</artifactId>
+                <version>${breeze.version}</version>
             </dependency>
 
         </dependencies>
