配置mybatis-plus 并添加测试实体测试

--- a/breeze-common/pom.xml
+++ b/breeze-common/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>breeze-common-core</module>
+        <module>breeze-commom-datasource</module>
     </modules>
 
 
