--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <spring-cloud.version>2021.0.0</spring-cloud.version>
         <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
         <alibaba.nacos.version>2.0.3</alibaba.nacos.version>
+        <druid.version>1.2.8</druid.version>
+        <dynamic-ds.version>3.5.0</dynamic-ds.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -65,9 +67,17 @@
                 <scope>import</scope>
             </dependency>
 
+            <!-- common-core-->
             <dependency>
                 <groupId>com.breeze</groupId>
                 <artifactId>breeze-common-core</artifactId>
+                <version>${breeze.version}</version>
+            </dependency>
+
+            <!-- common-core-->
+            <dependency>
+                <groupId>com.breeze</groupId>
+                <artifactId>breeze-commom-datasource</artifactId>
                 <version>${breeze.version}</version>
             </dependency>
 
