--- a/breeze-modules/breeze-system/pom.xml
+++ b/breeze-modules/breeze-system/pom.xml
@@ -33,19 +33,29 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
+        <!-- breeze-common-core -->
         <dependency>
             <groupId>com.breeze</groupId>
             <artifactId>breeze-common-core</artifactId>
         </dependency>
+
+        <!-- breeze-common-datasource -->
+        <dependency>
+            <groupId>com.breeze</groupId>
+            <artifactId>breeze-commom-datasource</artifactId>
+        </dependency>
+
+        <!-- Mysql Connector -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
