添加库存测试服务以及领域结构

--- a/breeze-common/breeze-common-core/pom.xml
+++ b/breeze-common/breeze-common-core/pom.xml
@@ -13,7 +13,11 @@
     <description>breeze-common-core</description>
 
     <dependencies>
-
+        <!-- SpringCloud Openfeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
 
