--- a/breeze-common/breeze-commom-datasource/pom.xml
+++ b/breeze-common/breeze-commom-datasource/pom.xml
@@ -26,6 +26,12 @@
             <version>${druid.version}</version>
         </dependency>
 
+        <!-- SpringBoot Seata -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
